Build GATE Lightning Address beta
